--- a/style/css/general.css
+++ b/style/css/general.css
@@ -2,6 +2,9 @@
     margin: 0 0 100px 0;
 }
 
+/*
+ * Config Form
+ */
 #configForm .cat-text.input-group {
     margin-bottom: 10px;
 }
@@ -68,4 +71,59 @@
 }
 .iconPicker.iconPicker-selected {
     background: #eee;
+}
+
+/*
+ * Dinner Schedule Tab
+ */
+#tab-main-content .schedule-header div{
+    border: 2px solid #c2c2c2;
+    border-radius: 5px;
+    margin: 2px;
+    margin-bottom: 0;
+    border-bottom: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
+}
+#tab-main-content .schedule-header {
+    font-size: 18px;
+}
+#tab-main-content .schedule-header .section-day {
+    background-color: #b6a19e;
+}
+#tab-main-content .schedule-header .section-breakfast {
+    background-color: #945d60;
+}
+#tab-main-content .schedule-header .section-lunch {
+    background-color: #626e60;
+}
+#tab-main-content .schedule-header .section-dinner {
+    background-color: #af473c;
+}
+#tab-main-content .schedule-header .section-snacks {
+    background-color: #3c3c3c;
+}
+
+#tab-main-content .row-day .section-header {
+    font-family: 'Sofia';
+    font-size: 35px;
+}
+
+#tab-main-content .row-day .section-header,
+#tab-main-content .row-day .day-content {
+    height: 80px;
+    border: 2px solid #c2c2c2;
+    border-radius: 5px;
+    margin: 2px;
+    text-align: center;
+}
+#tab-main-content .row-day.row-Monday .section-header,
+#tab-main-content .row-day.row-Monday .day-content {
+    margin-top: 0;
+    border-top: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
