--- a/style/css/general.css
+++ b/style/css/general.css
@@ -6,7 +6,7 @@
  * General Site Style
  */
 #recipe-app #main-menu {
-    background-color: #c38d9e;
+    background-color: #2c3531;
     overflow: auto;
     margin-bottom: 20px;
 }
@@ -18,7 +18,7 @@
     font-weight: bold;
 }
 #recipe-app #main-menu div.menu-item:hover {
-    background-color: #e4adbe;
+    background-color: #d1e8e2;
     cursor: pointer;
 }
 
@@ -127,29 +127,35 @@
     background-color: #3c3c3c;
 }
 
-#tab-main-content .row-day .section-header {
-    font-family: 'Calibri';
+#tab-main-content .row-day .section-label {
+    font-family: 'Courgette';
     font-size: 35px;
 }
 
-#tab-main-content .row-day .section-header,
+#tab-main-content .row-day .section-label,
 #tab-main-content .row-day .day-content {
-    height: 80px;
-    border: 2px solid #c2c2c2;
+    min-height: 80px;
+    /*border: 2px solid #c2c2c2;
     border-radius: 5px;
     margin: 2px;
-    text-align: center;
+    text-align: center;*/
 }
-#tab-main-content .row-day.row-Monday .section-header,
-#tab-main-content .row-day.row-Monday .day-content {
-    margin-top: 0;
-    border-top: 0;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+#tab-main-content .row-day .section-label {
+    border-bottom: 1px solid #c2c2c2;
+    margin-bottom: 20px;    
 }
 
 #tab-main-content .row-day .day-content {
     position: relative;
+}
+
+#tab-main-content .row-day .day-content .meal-label {
+    font-size: 20px;
+    vertical-align: top;
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    left: 0;
 }
 
 #tab-main-content .row-day .day-content .add-recipe-schedule-btn {
